29 May 2007: Wouter
	- routines to lock and unlock array of rrsets moved to cache/rrset.
	- lookup message from msg cache (and copy to region).

25 May 2007: Wouter
	- Acknowledge use of unbound-java code in iterator. Nicer readme.
	- services/cache/dns.c DNS Cache. Hybrid cache uses msgcache and
	  rrset cache from module environment.
	- packed rrset key has type and class as easily accessable struct
	  members. They are still kept in network format for fast msg encode.
	- dns cache find_delegation routine.
	- iterator main functions setup.
	- dns cache lookup setup.

24 May 2007: Wouter
	- small changes to prepare for subqueries.
	- iterator forwarder feature separated out.
	- iterator hints stub code, config file stub code, so that first
	  testing can proceed locally.
	- replay tests now have config option to enable forwarding mode.

23 May 2007: Wouter
	- outside network does precise timers for roundtrip estimates for rtt
	  and for setting timeout for UDP. Pending_udp takes milliseconds.
	- cleaner iterator sockaddr conversion of forwarder address.
	- iterator/iter_utils and iter_delegpt setup.
	- root hints.

22 May 2007: Wouter
	- outbound query list for modules and support to callback with the
	  outbound entry to the module.
	- testbound support for new serviced queries.
	- test for retry to TCP cannot use testbound any longer.
	- testns test for EDNS fallback, test for TCP fallback already exists.
	- fixes for no-locking compile.
	- mini_event timer precision and fix for change in timeouts during
	  timeout callback. Fix for fwd_three tests, performed nonexit query.

21 May 2007: Wouter
	- small comment on hash table locking.
	- outside network serviced queries, contain edns and tcp fallback,
	  and udp retries and rtt timing.

16 May 2007: Wouter
	- lruhash_touch() would cause locking order problems. Fixup in 
	  lock-verify in case locking cycle is found.
	- services/cache/rrset.c for rrset cache code.