@@ -1,6 +1,8 @@
 29 May 2007: Wouter
 	- routines to lock and unlock array of rrsets moved to cache/rrset.
 	- lookup message from msg cache (and copy to region).
+	- fixed cast error in dns msg lookup.
+	- message with duplicate rrset does not increase its TTLs twice.
 
 25 May 2007: Wouter
 	- Acknowledge use of unbound-java code in iterator. Nicer readme.
